--- a/Pax Plasma Themes/metadata.desktop
+++ b/Pax Plasma Themes/metadata.desktop
@@ -4,7 +4,7 @@ Comment=Pax Plasma Theme
 X-KDE-PluginInfo-Author=l4k1
 X-KDE-PluginInfo-Email=l4ki987@gmail.com
 X-KDE-PluginInfo-Name=Pax-Plasma
-X-KDE-PluginInfo-Version=6.1
+X-KDE-PluginInfo-Version=6.2
 X-KDE-PluginInfo-Website=
 X-KDE-PluginInfo-Category=Plasma Theme
 X-KDE-PluginInfo-License=GPLv3
@@ -12,4 +12,7 @@ X-KDE-PluginInfo-EnabledByDefault=true
 X-Plasma-API=5.0
 
 [AdaptiveTransparency]
+enabled=true
+
+[BlurBehindEffect]
 enabled=true
