--- a/Pax Global Themes/Pax-Global/metadata.desktop
+++ b/Pax Global Themes/Pax-Global/metadata.desktop
@@ -12,9 +12,9 @@ X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-PluginInfo-Author=l4k1
 X-KDE-PluginInfo-Email=l4k1987@gmail.com.com
 X-KDE-PluginInfo-License=GPLv3
-X-KDE-PluginInfo-Version=6.2
+X-KDE-PluginInfo-Version=6.3
 X-KDE-PluginInfo-Name=Pax-Global
 X-KDE-PluginInfo-Website=https://github.com/L4ki/Pax-Plasma-Themes
 X-KDE-fallbackPackage=org.kde.breeze.desktop
 X-Plasma-MainScript=defaults
-X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1838859,kns://colorschemes.knsrc/api.kde-look.org/1838857,kns://plasma-themes.knsrc/api.kde-look.org/1838878,kns://icons.knsrc/api.kde-look.org/1687609,kns://icons.knsrc/api.kde-look.org/1687608,kns://aurorae.knsrc/api.kde-look.org/1838866,kns://aurorae.knsrc/api.kde-look.org/1838862,kns://wallpaper.knsrc/api.kde-look.org/1633286,kns://sddmtheme.knsrc/api.kde-look.org/1838854
+X-KPackage-Dependencies=kns://colorschemes.knsrc/api.kde-look.org/1838859,kns://colorschemes.knsrc/api.kde-look.org/1838857,kns://plasma-themes.knsrc/api.kde-look.org/1838878,kns://icons.knsrc/api.kde-look.org/1687609,kns://icons.knsrc/api.kde-look.org/1687608,kns://aurorae.knsrc/api.kde-look.org/1838866,kns://aurorae.knsrc/api.kde-look.org/1838862,kns://aurorae.knsrc/api.kde-look.org/1838864,kns://aurorae.knsrc/api.kde-look.org/1838869,kns://wallpaper.knsrc/api.kde-look.org/1633286,kns://sddmtheme.knsrc/api.kde-look.org/1838854
